# Trabalho_ED_Filtro

./: .gitignore  main.c  meson.build
criar/: converteTXT.py
criarImagem/: converteTXT.py
functions/: image.c  image.h
functions/image/: image.c  image.h  meson.build
functions/interface/: meson.build  tela.c  tela.h
functions/lista/: list.c  list.h  meson.build
interface/: tela.c  tela.h
utils/: image_utils.py
